--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,3 +7,16 @@
 .content h1 {
     margin: 0;
 }
+ol.pokemons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: nome;
+    padding: 0;
+    margin: 0;
+}
+ol.pokemons li {
+  
+    margin: .5rem;
+    padding: 1rem;
+    background-color: #14a06f;
+}
